refactor(mailer): Remove deprecated locale instance